--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
-wheel
+asgiref==3.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.7
 Django==3.2.8
 django-cors-headers==3.5.0
+django-phonenumber-field==5.0.0
+django-rest-framework==0.1.0
+djangorestframework==3.12.4
+gunicorn==20.1.0
+idna==3.3
+phonenumbers==8.12.19
 psycopg2-binary==2.9.1
 python-decouple==3.5
+pytz==2021.3
 requests==2.26.0
-django-phonenumber-field==5.0.0
-phonenumbers==8.12.19
+sqlparse==0.4.2
+urllib3==1.26.7
