--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework==3.12.4
 gunicorn==20.1.0
 idna==3.3
 phonenumbers==8.12.19
+Pillow==8.4.0
 psycopg2-binary==2.9.1
 python-decouple==3.5
 pytz==2021.3
