--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.0.6
 anyjson==0.3.3
 asgiref==3.4.1
+backports.entry-points-selectable==1.1.1
 billiard==3.6.4.0
 celery==5.2.1
 certifi==2021.10.8
@@ -10,6 +11,7 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 Deprecated==1.2.13
+distlib==0.3.4
 Django==3.2.8
 django-celery==3.3.1
 django-celery-beat==2.2.1
@@ -17,13 +19,16 @@ django-celery-results==2.2.0
 django-cors-headers==3.5.0
 django-phonenumber-field==5.0.0
 django-rest-framework==0.1.0
+django-rocket-engine==0.0.11
 django-timezone-field==4.2.1
 djangorestframework==3.12.4
+filelock==3.4.0
 gunicorn==20.1.0
 idna==3.3
 kombu==5.2.2
 phonenumbers==8.12.19
 Pillow==8.4.0
+platformdirs==2.4.0
 prompt-toolkit==3.0.23
 psycopg2-binary==2.9.1
 python-crontab==2.6.0
@@ -36,5 +41,6 @@ six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.7
 vine==5.0.0
+virtualenv==20.10.0
 wcwidth==0.2.5
 wrapt==1.13.3
